# booster-teleop

./: .gitignore  environment.yml
robot_deploy_fork_ws/install/: local_setup.sh  setup.sh
robot_deploy_fork_ws/install/booster_controller/share/booster_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_deploy_fork_ws/install/booster_interface/share/booster_interface/: local_setup.sh  package.dsv  package.ps1  package.sh
robot_deploy_fork_ws/install/booster_policies/share/booster_policies/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_deploy_fork_ws/install/booster_teleop/lib/booster_teleop/: arm_sine_test
robot_deploy_fork_ws/install/booster_teleop/share/booster_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_deploy_fork_ws/install/mimic_k1_data/share/mimic_k1_data/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_deploy_fork_ws/install/mimic_k1_data/share/mimic_k1_data/cmake/: mimic_k1_dataConfig.cmake
robot_deploy_fork_ws/install/mimic_k1_data/share/mimic_k1_data/config/: deepmimic_k1_env.yaml
robot_deploy_fork_ws/install/mimic_k1_data/share/mimic_k1_data/data/assets/K1/: K1_locomotion.urdf  K1_locomotion.xml  K1_locomotion_arms_down.xml  K1_locomotion_arms_down_armature.xml  K1_serial.xml  K1_serial_mujoco.xml
robot_deploy_fork_ws/log/: latest_build
src/: 01_landmarks.py  02_angles.py  03_both_hands.py  full_body_pose_and_hands.py  hand_phalanges.py  utils.py
(+67 files in other folders)
