<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mimic_k1_data</name>
    <version>0.0.0</version>
  <description>Shared data files for K1 DeepMimic policies</description>
  <maintainer email="ssaavvaa222@gmail.com">slava</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>